// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`dispatch(addRoutes(routes)): {"type":"@@rudy/ADD_ROUTES","payload":{"routes":{"FOO":{"path":"/foo","type":"FOO"},"@@rudy/ADD_ROUTES":{"type":"@@rudy/ADD_ROUTES"},"@@rudy/CHANGE_BASENAME":{"dispatch":false,"type":"@@rudy/CHANGE_BASENAME"},"@@rudy/CLEAR_CACHE":{"type":"@@rudy/CLEAR_CACHE"},"@@rudy/CONFIRM":{"dispatch":false,"type":"@@rudy/CONFIRM"},"@@rudy/CALL_HISTORY":{"dispatch":false,"type":"@@rudy/CALL_HISTORY"}}}} - history_entries 1`] = `
Array [
  Object {
    "basename": "",
    "hash": "",
    "key": "345678",
    "pathname": "/first",
    "search": "",
    "state": Object {},
    "url": "/first",
  },
]
`;

exports[`dispatch(addRoutes(routes)): {"type":"@@rudy/ADD_ROUTES","payload":{"routes":{"FOO":{"path":"/foo","type":"FOO"},"@@rudy/ADD_ROUTES":{"type":"@@rudy/ADD_ROUTES"},"@@rudy/CHANGE_BASENAME":{"dispatch":false,"type":"@@rudy/CHANGE_BASENAME"},"@@rudy/CLEAR_CACHE":{"type":"@@rudy/CLEAR_CACHE"},"@@rudy/CONFIRM":{"dispatch":false,"type":"@@rudy/CONFIRM"},"@@rudy/CALL_HISTORY":{"dispatch":false,"type":"@@rudy/CALL_HISTORY"}}}} - history_index 1`] = `0`;

exports[`dispatch(addRoutes(routes)): {"type":"@@rudy/ADD_ROUTES","payload":{"routes":{"FOO":{"path":"/foo","type":"FOO"},"@@rudy/ADD_ROUTES":{"type":"@@rudy/ADD_ROUTES"},"@@rudy/CHANGE_BASENAME":{"dispatch":false,"type":"@@rudy/CHANGE_BASENAME"},"@@rudy/CLEAR_CACHE":{"type":"@@rudy/CLEAR_CACHE"},"@@rudy/CONFIRM":{"dispatch":false,"type":"@@rudy/CONFIRM"},"@@rudy/CALL_HISTORY":{"dispatch":false,"type":"@@rudy/CALL_HISTORY"}}}} - response 1`] = `
Object {
  "payload": Object {
    "formatRoute": undefined,
    "routes": Object {
      "@@rudy/ADD_ROUTES": Object {
        "thunk": [Function],
        "type": "@@rudy/ADD_ROUTES",
      },
      "@@rudy/CALL_HISTORY": Object {
        "dispatch": false,
        "thunk": [Function],
        "type": "@@rudy/CALL_HISTORY",
      },
      "@@rudy/CHANGE_BASENAME": Object {
        "dispatch": false,
        "thunk": [Function],
        "type": "@@rudy/CHANGE_BASENAME",
      },
      "@@rudy/CLEAR_CACHE": Object {
        "thunk": [Function],
        "type": "@@rudy/CLEAR_CACHE",
      },
      "@@rudy/CONFIRM": Object {
        "dispatch": false,
        "thunk": [Function],
        "type": "@@rudy/CONFIRM",
      },
      "FOO": Object {
        "path": "/foo",
        "type": "FOO",
      },
    },
  },
  "type": "@@rudy/ADD_ROUTES",
}
`;

exports[`dispatch(addRoutes(routes)): {"type":"@@rudy/ADD_ROUTES","payload":{"routes":{"FOO":{"path":"/foo","type":"FOO"},"@@rudy/ADD_ROUTES":{"type":"@@rudy/ADD_ROUTES"},"@@rudy/CHANGE_BASENAME":{"dispatch":false,"type":"@@rudy/CHANGE_BASENAME"},"@@rudy/CLEAR_CACHE":{"type":"@@rudy/CLEAR_CACHE"},"@@rudy/CONFIRM":{"dispatch":false,"type":"@@rudy/CONFIRM"},"@@rudy/CALL_HISTORY":{"dispatch":false,"type":"@@rudy/CALL_HISTORY"}}}} - routes - NEVER_USED_PATHLESS - thunk 1`] = `0`;

exports[`dispatch(addRoutes(routes)): {"type":"@@rudy/ADD_ROUTES","payload":{"routes":{"FOO":{"path":"/foo","type":"FOO"},"@@rudy/ADD_ROUTES":{"type":"@@rudy/ADD_ROUTES"},"@@rudy/CHANGE_BASENAME":{"dispatch":false,"type":"@@rudy/CHANGE_BASENAME"},"@@rudy/CLEAR_CACHE":{"type":"@@rudy/CLEAR_CACHE"},"@@rudy/CONFIRM":{"dispatch":false,"type":"@@rudy/CONFIRM"},"@@rudy/CALL_HISTORY":{"dispatch":false,"type":"@@rudy/CALL_HISTORY"}}}} - routes - REDIRECTED - onComplete 1`] = `0`;

exports[`dispatch(addRoutes(routes)): {"type":"@@rudy/ADD_ROUTES","payload":{"routes":{"FOO":{"path":"/foo","type":"FOO"},"@@rudy/ADD_ROUTES":{"type":"@@rudy/ADD_ROUTES"},"@@rudy/CHANGE_BASENAME":{"dispatch":false,"type":"@@rudy/CHANGE_BASENAME"},"@@rudy/CLEAR_CACHE":{"type":"@@rudy/CLEAR_CACHE"},"@@rudy/CONFIRM":{"dispatch":false,"type":"@@rudy/CONFIRM"},"@@rudy/CALL_HISTORY":{"dispatch":false,"type":"@@rudy/CALL_HISTORY"}}}} - state 1`] = `
Object {
  "location": Object {
    "basename": "",
    "direction": "forward",
    "entries": Array [
      Object {
        "basename": "",
        "hash": "",
        "key": "345678",
        "pathname": "/first",
        "search": "",
        "state": Object {},
        "url": "/first",
      },
    ],
    "from": null,
    "hash": "",
    "index": 0,
    "kind": "load",
    "length": 1,
    "params": Object {},
    "pathname": "/first",
    "pop": false,
    "prev": Object {
      "basename": "",
      "direction": "forward",
      "entries": Array [],
      "hash": "",
      "index": -1,
      "kind": "",
      "length": 0,
      "params": Object {},
      "pathname": "",
      "query": Object {},
      "scene": "",
      "search": "",
      "state": Object {},
      "type": "",
      "url": "",
    },
    "query": Object {},
    "routesAdded": 1,
    "scene": "",
    "search": "",
    "state": Object {},
    "status": 200,
    "type": "FIRST",
    "universal": false,
    "url": "/first",
  },
  "title": "@@rudy/ADD_ROUTES - {\\"routes\\":{\\"FOO\\":{\\"path\\":\\"/foo\\"}}}",
}
`;

exports[`dispatch(addRoutes(routes)): {"type":"@@rudy/ADD_ROUTES","payload":{"routes":{"FOO":{"path":"/foo","type":"FOO"},"@@rudy/ADD_ROUTES":{"type":"@@rudy/ADD_ROUTES"},"@@rudy/CHANGE_BASENAME":{"dispatch":false,"type":"@@rudy/CHANGE_BASENAME"},"@@rudy/CLEAR_CACHE":{"type":"@@rudy/CLEAR_CACHE"},"@@rudy/CONFIRM":{"dispatch":false,"type":"@@rudy/CONFIRM"},"@@rudy/CALL_HISTORY":{"dispatch":false,"type":"@@rudy/CALL_HISTORY"}}}} - title 1`] = `"FIRST"`;

exports[`dispatch(addRoutes(routes)): {"type":"FOO"} - history_entries 1`] = `
Array [
  Object {
    "basename": "",
    "hash": "",
    "key": "345678",
    "pathname": "/first",
    "search": "",
    "state": Object {},
    "url": "/first",
  },
  Object {
    "basename": "",
    "hash": "",
    "key": "345678",
    "pathname": "/foo",
    "search": "",
    "state": Object {},
    "url": "/foo",
  },
]
`;

exports[`dispatch(addRoutes(routes)): {"type":"FOO"} - history_index 1`] = `1`;

exports[`dispatch(addRoutes(routes)): {"type":"FOO"} - response 1`] = `
Object {
  "basename": "",
  "hash": "",
  "location": Object {
    "direction": "forward",
    "entries": Array [
      Object {
        "basename": "",
        "hash": "",
        "key": "345678",
        "pathname": "/first",
        "search": "",
        "state": Object {},
        "url": "/first",
      },
      Object {
        "basename": "",
        "hash": "",
        "key": "345678",
        "pathname": "/foo",
        "search": "",
        "state": Object {},
        "url": "/foo",
      },
    ],
    "from": null,
    "index": 1,
    "kind": "push",
    "length": 2,
    "pathname": "/foo",
    "pop": false,
    "prev": Object {
      "basename": "",
      "direction": "forward",
      "entries": Array [
        Object {
          "basename": "",
          "hash": "",
          "key": "345678",
          "pathname": "/first",
          "search": "",
          "state": Object {},
          "url": "/first",
        },
      ],
      "hash": "",
      "index": 0,
      "kind": "load",
      "length": 1,
      "params": Object {},
      "pathname": "/first",
      "pop": false,
      "query": Object {},
      "routesAdded": 1,
      "scene": "",
      "search": "",
      "state": Object {},
      "status": 200,
      "type": "FIRST",
      "url": "/first",
    },
    "scene": "",
    "search": "",
    "status": 200,
    "url": "/foo",
  },
  "params": Object {},
  "query": Object {},
  "state": Object {},
  "type": "FOO",
}
`;

exports[`dispatch(addRoutes(routes)): {"type":"FOO"} - routes - NEVER_USED_PATHLESS - thunk 1`] = `0`;

exports[`dispatch(addRoutes(routes)): {"type":"FOO"} - routes - REDIRECTED - onComplete 1`] = `0`;

exports[`dispatch(addRoutes(routes)): {"type":"FOO"} - state 1`] = `
Object {
  "location": Object {
    "basename": "",
    "direction": "forward",
    "entries": Array [
      Object {
        "basename": "",
        "hash": "",
        "key": "345678",
        "pathname": "/first",
        "search": "",
        "state": Object {},
        "url": "/first",
      },
      Object {
        "basename": "",
        "hash": "",
        "key": "345678",
        "pathname": "/foo",
        "search": "",
        "state": Object {},
        "url": "/foo",
      },
    ],
    "from": null,
    "hash": "",
    "index": 1,
    "kind": "push",
    "length": 2,
    "params": Object {},
    "pathname": "/foo",
    "pop": false,
    "prev": Object {
      "basename": "",
      "direction": "forward",
      "entries": Array [
        Object {
          "basename": "",
          "hash": "",
          "key": "345678",
          "pathname": "/first",
          "search": "",
          "state": Object {},
          "url": "/first",
        },
      ],
      "hash": "",
      "index": 0,
      "kind": "load",
      "length": 1,
      "params": Object {},
      "pathname": "/first",
      "pop": false,
      "query": Object {},
      "routesAdded": 1,
      "scene": "",
      "search": "",
      "state": Object {},
      "status": 200,
      "type": "FIRST",
      "url": "/first",
    },
    "query": Object {},
    "scene": "",
    "search": "",
    "state": Object {},
    "status": 200,
    "type": "FOO",
    "universal": false,
    "url": "/foo",
  },
  "title": "FOO",
}
`;

exports[`dispatch(addRoutes(routes)): {"type":"FOO"} - title 1`] = `"FOO"`;

exports[`dispatch(addRoutes(routes, formatRoute)): {"type":"@@rudy/ADD_ROUTES","payload":{"routes":{"FOO":{"path":"/bar","type":"FOO"},"BAZ":{"path":"/bar","type":"BAZ"},"@@rudy/ADD_ROUTES":{"path":"/bar","type":"@@rudy/ADD_ROUTES"},"@@rudy/CHANGE_BASENAME":{"dispatch":false,"path":"/bar","type":"@@rudy/CHANGE_BASENAME"},"@@rudy/CLEAR_CACHE":{"path":"/bar","type":"@@rudy/CLEAR_CACHE"},"@@rudy/CONFIRM":{"dispatch":false,"path":"/bar","type":"@@rudy/CONFIRM"},"@@rudy/CALL_HISTORY":{"dispatch":false,"path":"/bar","type":"@@rudy/CALL_HISTORY"}}}} - history_entries 1`] = `
Array [
  Object {
    "basename": "",
    "hash": "",
    "key": "345678",
    "pathname": "/first",
    "search": "",
    "state": Object {},
    "url": "/first",
  },
]
`;

exports[`dispatch(addRoutes(routes, formatRoute)): {"type":"@@rudy/ADD_ROUTES","payload":{"routes":{"FOO":{"path":"/bar","type":"FOO"},"BAZ":{"path":"/bar","type":"BAZ"},"@@rudy/ADD_ROUTES":{"path":"/bar","type":"@@rudy/ADD_ROUTES"},"@@rudy/CHANGE_BASENAME":{"dispatch":false,"path":"/bar","type":"@@rudy/CHANGE_BASENAME"},"@@rudy/CLEAR_CACHE":{"path":"/bar","type":"@@rudy/CLEAR_CACHE"},"@@rudy/CONFIRM":{"dispatch":false,"path":"/bar","type":"@@rudy/CONFIRM"},"@@rudy/CALL_HISTORY":{"dispatch":false,"path":"/bar","type":"@@rudy/CALL_HISTORY"}}}} - history_index 1`] = `0`;

exports[`dispatch(addRoutes(routes, formatRoute)): {"type":"@@rudy/ADD_ROUTES","payload":{"routes":{"FOO":{"path":"/bar","type":"FOO"},"BAZ":{"path":"/bar","type":"BAZ"},"@@rudy/ADD_ROUTES":{"path":"/bar","type":"@@rudy/ADD_ROUTES"},"@@rudy/CHANGE_BASENAME":{"dispatch":false,"path":"/bar","type":"@@rudy/CHANGE_BASENAME"},"@@rudy/CLEAR_CACHE":{"path":"/bar","type":"@@rudy/CLEAR_CACHE"},"@@rudy/CONFIRM":{"dispatch":false,"path":"/bar","type":"@@rudy/CONFIRM"},"@@rudy/CALL_HISTORY":{"dispatch":false,"path":"/bar","type":"@@rudy/CALL_HISTORY"}}}} - response 1`] = `
Object {
  "payload": Object {
    "formatRoute": [Function],
    "routes": Object {
      "@@rudy/ADD_ROUTES": Object {
        "path": "/bar",
        "thunk": [Function],
        "type": "@@rudy/ADD_ROUTES",
      },
      "@@rudy/CALL_HISTORY": Object {
        "dispatch": false,
        "path": "/bar",
        "thunk": [Function],
        "type": "@@rudy/CALL_HISTORY",
      },
      "@@rudy/CHANGE_BASENAME": Object {
        "dispatch": false,
        "path": "/bar",
        "thunk": [Function],
        "type": "@@rudy/CHANGE_BASENAME",
      },
      "@@rudy/CLEAR_CACHE": Object {
        "path": "/bar",
        "thunk": [Function],
        "type": "@@rudy/CLEAR_CACHE",
      },
      "@@rudy/CONFIRM": Object {
        "dispatch": false,
        "path": "/bar",
        "thunk": [Function],
        "type": "@@rudy/CONFIRM",
      },
      "BAZ": Object {
        "path": "/bar",
        "thunk": [Function],
        "type": "BAZ",
      },
      "FOO": Object {
        "path": "/bar",
        "thunk": [Function],
        "type": "FOO",
      },
    },
  },
  "type": "@@rudy/ADD_ROUTES",
}
`;

exports[`dispatch(addRoutes(routes, formatRoute)): {"type":"@@rudy/ADD_ROUTES","payload":{"routes":{"FOO":{"path":"/bar","type":"FOO"},"BAZ":{"path":"/bar","type":"BAZ"},"@@rudy/ADD_ROUTES":{"path":"/bar","type":"@@rudy/ADD_ROUTES"},"@@rudy/CHANGE_BASENAME":{"dispatch":false,"path":"/bar","type":"@@rudy/CHANGE_BASENAME"},"@@rudy/CLEAR_CACHE":{"path":"/bar","type":"@@rudy/CLEAR_CACHE"},"@@rudy/CONFIRM":{"dispatch":false,"path":"/bar","type":"@@rudy/CONFIRM"},"@@rudy/CALL_HISTORY":{"dispatch":false,"path":"/bar","type":"@@rudy/CALL_HISTORY"}}}} - routes - NEVER_USED_PATHLESS - thunk 1`] = `0`;

exports[`dispatch(addRoutes(routes, formatRoute)): {"type":"@@rudy/ADD_ROUTES","payload":{"routes":{"FOO":{"path":"/bar","type":"FOO"},"BAZ":{"path":"/bar","type":"BAZ"},"@@rudy/ADD_ROUTES":{"path":"/bar","type":"@@rudy/ADD_ROUTES"},"@@rudy/CHANGE_BASENAME":{"dispatch":false,"path":"/bar","type":"@@rudy/CHANGE_BASENAME"},"@@rudy/CLEAR_CACHE":{"path":"/bar","type":"@@rudy/CLEAR_CACHE"},"@@rudy/CONFIRM":{"dispatch":false,"path":"/bar","type":"@@rudy/CONFIRM"},"@@rudy/CALL_HISTORY":{"dispatch":false,"path":"/bar","type":"@@rudy/CALL_HISTORY"}}}} - routes - REDIRECTED - onComplete 1`] = `0`;

exports[`dispatch(addRoutes(routes, formatRoute)): {"type":"@@rudy/ADD_ROUTES","payload":{"routes":{"FOO":{"path":"/bar","type":"FOO"},"BAZ":{"path":"/bar","type":"BAZ"},"@@rudy/ADD_ROUTES":{"path":"/bar","type":"@@rudy/ADD_ROUTES"},"@@rudy/CHANGE_BASENAME":{"dispatch":false,"path":"/bar","type":"@@rudy/CHANGE_BASENAME"},"@@rudy/CLEAR_CACHE":{"path":"/bar","type":"@@rudy/CLEAR_CACHE"},"@@rudy/CONFIRM":{"dispatch":false,"path":"/bar","type":"@@rudy/CONFIRM"},"@@rudy/CALL_HISTORY":{"dispatch":false,"path":"/bar","type":"@@rudy/CALL_HISTORY"}}}} - state 1`] = `
Object {
  "location": Object {
    "basename": "",
    "direction": "forward",
    "entries": Array [
      Object {
        "basename": "",
        "hash": "",
        "key": "345678",
        "pathname": "/first",
        "search": "",
        "state": Object {},
        "url": "/first",
      },
    ],
    "from": null,
    "hash": "",
    "index": 0,
    "kind": "load",
    "length": 1,
    "params": Object {},
    "pathname": "/first",
    "pop": false,
    "prev": Object {
      "basename": "",
      "direction": "forward",
      "entries": Array [],
      "hash": "",
      "index": -1,
      "kind": "",
      "length": 0,
      "params": Object {},
      "pathname": "",
      "query": Object {},
      "scene": "",
      "search": "",
      "state": Object {},
      "type": "",
      "url": "",
    },
    "query": Object {},
    "routesAdded": 2,
    "scene": "",
    "search": "",
    "state": Object {},
    "status": 200,
    "type": "FIRST",
    "universal": false,
    "url": "/first",
  },
  "title": "@@rudy/ADD_ROUTES - {\\"routes\\":{\\"FOO\\":{\\"path\\":\\"/foo\\",\\"thunk\\":\\"BAZ\\"},\\"BAZ\\":{\\"path\\":\\"/baz\\"}}}",
}
`;

exports[`dispatch(addRoutes(routes, formatRoute)): {"type":"@@rudy/ADD_ROUTES","payload":{"routes":{"FOO":{"path":"/bar","type":"FOO"},"BAZ":{"path":"/bar","type":"BAZ"},"@@rudy/ADD_ROUTES":{"path":"/bar","type":"@@rudy/ADD_ROUTES"},"@@rudy/CHANGE_BASENAME":{"dispatch":false,"path":"/bar","type":"@@rudy/CHANGE_BASENAME"},"@@rudy/CLEAR_CACHE":{"path":"/bar","type":"@@rudy/CLEAR_CACHE"},"@@rudy/CONFIRM":{"dispatch":false,"path":"/bar","type":"@@rudy/CONFIRM"},"@@rudy/CALL_HISTORY":{"dispatch":false,"path":"/bar","type":"@@rudy/CALL_HISTORY"}}}} - title 1`] = `"FIRST"`;

exports[`dispatch(addRoutes(routes, formatRoute)): {"type":"FOO"} - history_entries 1`] = `
Array [
  Object {
    "basename": "",
    "hash": "",
    "key": "345678",
    "pathname": "/first",
    "search": "",
    "state": Object {},
    "url": "/first",
  },
  Object {
    "basename": "",
    "hash": "",
    "key": "345678",
    "pathname": "/bar",
    "search": "",
    "state": Object {},
    "url": "/bar",
  },
]
`;

exports[`dispatch(addRoutes(routes, formatRoute)): {"type":"FOO"} - history_index 1`] = `1`;

exports[`dispatch(addRoutes(routes, formatRoute)): {"type":"FOO"} - response 1`] = `
Object {
  "payload": "payload",
  "type": "FOO_COMPLETE",
}
`;

exports[`dispatch(addRoutes(routes, formatRoute)): {"type":"FOO"} - routes - NEVER_USED_PATHLESS - thunk 1`] = `0`;

exports[`dispatch(addRoutes(routes, formatRoute)): {"type":"FOO"} - routes - REDIRECTED - onComplete 1`] = `0`;

exports[`dispatch(addRoutes(routes, formatRoute)): {"type":"FOO"} - state 1`] = `
Object {
  "location": Object {
    "basename": "",
    "direction": "forward",
    "entries": Array [
      Object {
        "basename": "",
        "hash": "",
        "key": "345678",
        "pathname": "/first",
        "search": "",
        "state": Object {},
        "url": "/first",
      },
      Object {
        "basename": "",
        "hash": "",
        "key": "345678",
        "pathname": "/bar",
        "search": "",
        "state": Object {},
        "url": "/bar",
      },
    ],
    "from": null,
    "hash": "",
    "index": 1,
    "kind": "push",
    "length": 2,
    "params": Object {},
    "pathname": "/bar",
    "pop": false,
    "prev": Object {
      "basename": "",
      "direction": "forward",
      "entries": Array [
        Object {
          "basename": "",
          "hash": "",
          "key": "345678",
          "pathname": "/first",
          "search": "",
          "state": Object {},
          "url": "/first",
        },
      ],
      "hash": "",
      "index": 0,
      "kind": "load",
      "length": 1,
      "params": Object {},
      "pathname": "/first",
      "pop": false,
      "query": Object {},
      "routesAdded": 2,
      "scene": "",
      "search": "",
      "state": Object {},
      "status": 200,
      "type": "FIRST",
      "url": "/first",
    },
    "query": Object {},
    "ready": true,
    "scene": "",
    "search": "",
    "state": Object {},
    "status": 200,
    "type": "FOO",
    "universal": false,
    "url": "/bar",
  },
  "title": "FOO_COMPLETE - \\"payload\\"",
}
`;

exports[`dispatch(addRoutes(routes, formatRoute)): {"type":"FOO"} - title 1`] = `"FOO"`;
